--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -528,3 +528,24 @@ img {
     width: 450px;
   }
 }
+/* adding the new media query */
+@media screen and (max-width: 767px) {
+  .home__img {
+    position: static;
+    transform: none;
+    margin-top: 2rem; /* Adjust this value as needed */
+  }
+  
+  .home__social {
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .home__social-icon {
+    margin-right: var(--mb-4);
+  }
+  
+  .home__download {
+    margin-top: 2rem; /* Adjust this value as needed */
+  }
+}
