--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -533,7 +533,7 @@ img {
   .home__img {
     position: static;
     transform: none;
-    margin-top: 0.4;
+    margin-top: 0.25;
      margin-left: auto;
     margin-right: auto;/* Adjust this value as needed */
   }
@@ -544,10 +544,10 @@ img {
   }
   
   .home__social-icon {
-    margin-right: var(--mb-4);
+   margin-right: 0.5rem;
   }
   
   .home__download {
-    margin-top: 0.4; /* Adjust this value as needed */
+    margin-top: 0.5; /* Adjust this value as needed */
   }
 }
